# video_analysis

./: README.md
tamper/: CMakeLists.txt  main.cpp
